# Owniverse-Solana

./: README.md  lib.rs
.asset/: owniverse.json
owniverse-core/: Anchor.toml
owniverse-core/programs/owniverse-core/: Cargo.toml
owniverse-core/programs/owniverse-core/src/: lib.rs
owniverse-core/programs/owniverse-core/src/instructions/: mint.rs  mod.rs
owniverse-core/tests/: owniverse-core.ts
tests/: owniverse_core.ts
