[package]
name = "owniverse-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "owniverse_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] # เพิ่ม anchor-spl/idl-build ตามตัวอย่าง

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] } # เพิ่มฟีเจอร์ init-if-needed
anchor-spl = { version = "0.30.1", features = ["metadata"] } # เพิ่ม anchor-spl สำหรับการทำงานกับ metadata
